# oneoffs

./: .chat_history  .cursorrules  .gitignore  README.md  ad_groups_REQ0228761.csv  aft-three-tier-customization-guide.md  aws_terraform_capabilities.md  cast_pre_deployment_checklist.md  check_microphone_status.sh  claude_extension_complete_solution.md  comprehensive_dictation_fix.sh  dictation_fix_menu.sh  download_and_install_extensions.sh  find-grep-patterns.md  guard_rails_conversation_context.md  guard_rails_setup_context.md  guardrails_reinstallation_checklist_report.md  install_claude_extension_openvsx.sh  install_extensions.sh  install_extensions_openvsx.sh  instance_profile_documentation.md  manual_claude_installation_guide.md  mcp_aws_terraform_tools.md  mcp_backup_20251024_200448.json  method1_audio_system_reset.sh  method2_system_preferences_reset.sh  method3_launchd_services_reset.sh  method4_network_siri_reset.sh  method5_hardware_audio_reset.sh  no_sudo_dictation_fix.sh  quick_no_sudo_fix.sh  quick_restart_dictation.sh  restart_dictation.sh  run_all_dictation_methods.sh  troubleshooting-log.md  vpc_cidr_scan_focused_20250925_034838.csv
tools/aft_aws_access/: .chat_history  .env.sailpoint  .env.sailpoint.investigation  .gitignore  GET_STARTED.md  INDEX.md  INSTALL.md  QUICKSTART.md  QUICK_REFERENCE.txt  SailPoint Integration with AWS IAM Groups  all_identitystore_events.json  example_usage.py  group_creation_events.json  identity_center_all_groups.json  investigate_sync.sh  missing_groups.yaml  pyproject.toml  sailpoint_sources.json  sailpoint_sources_test.json  sample_event.json  trigger_okta_sync.sh
tools/aft_aws_access/.serena/: project.yml
tools/aft_aws_access/account_diagrams_data/: bfh_mgmt_iam_roles.json  database_sandbox_iam_roles.json  log_archive_groups.json
tools/aft_aws_access/conversations/AWS IAM Group Provisioning Investigation/: AWS IAM Group Provisioning Investigation
tools/aft_aws_access/data/derived/: CLOUDTRAIL_SUMMARY.txt
tools/aft_aws_access/data/raw/: all_identity_events.json  cloudtrail_group_membership_events.json  cloudtrail_scim_events.json
tools/aft_aws_access/diagrams/: .chat_history
tools/aft_aws_access/diagrams/WIP_sequence_for_systems/: WIP_sso_vs_provisioning.md
tools/aft_aws_access/diagrams/lifecycle_bfh_mgmt/: INDEX.md  QUICK_START.txt  README.md
tools/aft_aws_access/docs/: GET_STARTED.md  INDEX.md  INSTALL.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_TLDR.md  RESEARCH_SUMMARY.md  ROADMAP.md  STRUCTURE.md  SUMMARY.md
tools/aft_aws_access/docs/presentations/: SailPoint Integration with AWS IAM Groups
tools/aft_aws_access/generated-diagrams/: README.md
tools/aft_aws_access/incident_reports/extreme_ineffectiveness/: conversation_dump.txt  meta.json  report.md
tools/aft_aws_access/investigations/20241114_scim_investigation/: ACCOUNT_ACCESS_CLARIFICATION.md  INDEX.md  (+24 more)
tools/aft_aws_access/research/: HANDS_ON_INVESTIGATION.md  HANDS_ON_QUICK_START.md  QUICK_CHECK_GUIDE.md  README.md  SELF_SERVICE_OPTIONS.md
tools/aft_aws_access/scripts/: gather_account_resources.sh
tools/aft_aws_access/tests/: __init__.py
tools/aft_aws_acess/: Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  aws_recent.csv  compare_ad_groups.py  pyproject.toml  setup.sh
tools/aft_aws_acess/tests/: test_compare_ad_groups.py
(+353 files in other folders)
